java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateField7-hints.pass
Create method test() in org.netbeans.test.java.hints.CreateField7
